--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install -r requirements-dev.txt
 
 script:
-  - flake8
+  - flake8 djlotrek
   - ./runtests.py --with-coverage
   - codecov
