--- a/.coveragerc
+++ b/.coveragerc
@@ -5,5 +5,6 @@ omit =
     djlotrek/widgets.py
     djlotrek/middleware/cache_admin.py
     djlotrek/middleware/cache_header.py
+    djlotrek/middleware/locale.py
 [report]
 show_missing = True
