--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ python_requires = >= 3.0.*
 install_requires =
         pycryptodome>=3.9.8
         requests>=2.18.4
+        Django>=1.8
 [bdist_wheel]
 universal=true
 [semantic_release]
