--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,4 @@ install_requires =
 [bdist_wheel]
 universal=true
 [semantic_release]
-version_variable = 
-        setup.py:__version__
-        djlotrek/__init__.py:__version__
+version_variable = setup.py:__version__,djlotrek/__init__.py:__version__
